fix remove the "gap" of content sidebar if have top alert

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -35,7 +35,7 @@
         }
 
         ~ .fi-layout .content-sidebar .icon-btn, ~ .fi-layout .content-sidebar .content-sidebar_desktop {
-            @apply top-28 !important;
+            @apply top-[6.5rem] !important;
         }
     }
 }
